<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    >


    <SwitchPreferenceCompat
        android:key="areNotificationsEnabled"
        android:summaryOff="@string/notifications_setting_off"
        android:summaryOn="@string/notifications_setting_on"
        android:title="@string/notifications"
        app:iconSpaceReserved="false" />
    
    <Preference
        android:key="@string/notification_time_key"
        app:iconSpaceReserved="false"
        android:title="Time"
        
        android:defaultValue="36000000L"
        android:summary="10:00"
        />
    <!--    <SwitchPreferenceCompat-->
    <!--        app:key="notifications"-->
    <!--        app:title="Enable message notifications"/>-->

    <!--    <Preference-->
    <!--        app:key="feedback"-->
    <!--        app:title="Send feedback"-->
    <!--        app:summary="Report technical issues or suggest new features"/>-->

</androidx.preference.PreferenceScreen>